	respective chunk of data leaving everything else alone.

January 23 2023
* Moved player save handling to a component on the SaveHandler.

January 24 2023
* Organized source folder structure.

January 25 2023
+ Added Pending Player Save System.
* Made UI Elements Modular classes.

January 26-27 2023
* Polished the User Interface.
================================================

===========Version 0.1.1 Prototype==============
January 27 2023
* Made UI Slightly Transparent.
* Fixed Movement Being slowed by looking down.
* Updated Version Text on menu.
* Fixed Game Crashing in PIE.
* Inventory Now Uses a Uniform Grid Panel.
* Streamlined Inventory Slot Generation.
* Tidy Data Table names.

January 28 2023
* Cleaner PIE Level Creation.
* Improved Inventory Data Implementation.
* Inventory Data Replicated by default.
================================================

===========Version 0.1.2 Prototype==============
January 28 2023
* Renamed FItemData to FInventoryItem.

January 29 2023
* Fixed Packets being droped under lag.
* Changed Version Text.
* Inventory Data is saved.

January 30 2023
* Inventory Slot Data is saved only in singleplayer.

Febuary 2 2023
+ Inventory Saving.

Febuary 3 2023
* UI Improvements.
+ Vitals Icons.
+ Slot Highlighting.
+ Closing the inventory while dragging will drop the selected item.
================================================

===========Version 0.1.3 Prototype==============
* Save Creation Date information is populated.
* Version info gathering change.
+ Auto Save feature saves game every 90 seconds.
* Input box must contain text.
* Input box cleared when switching menus.
* Input box 16 character limit.
* Fixed Item Duplication glitch.
================================================
===========Version 0.2.0 Prototype==============
================================================
===========Version 0.2.1 Prototype==============
================================================