@@ -71,6 +71,7 @@ Febuary 3 2023
 * Fixed Item Duplication glitch.
 ================================================
 ===========Version 0.2.0 Prototype==============
++ Toolbar Selection Index Increment.
 ================================================
 ===========Version 0.2.1 Prototype==============
 ================================================
